--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,9 @@
 <resources>
 
     <style name="Theme.KotlinBestPractice" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.SplashScreenAPI" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/black</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
+        <item name="postSplashScreenTheme">@style/Theme.KotlinBestPractice</item>
+    </style>
 </resources>
